# metripoll

./: LICENSE  README.md  setup.cfg  setup.py  someFile.txt
data/: mockResponse.json
metripoll/: __init__.py  __main__.py  configuration.py  loader.py  metric.py  parser.py  poller.py
tests/: test_configuration.py
