[metadata]
name = metripoll
description = A Python program for polling JSON metrics
author = Jake Everhart
url = https://github.com/jakesactualface/metripoll
version = 0.0.1
install_requires =
    requests
    argparse
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:

[options.entry_points]
console_scripts =
    metripoll = metripoll.__main__:main